fixed a typo in new table name

--- a/NRGetData/config.json
+++ b/NRGetData/config.json
@@ -2,7 +2,7 @@
     "key": "<<REPLACE WITH AZURE LA PRIMARY KEY>>",
     "CustomerId": "<<REPLACE WITH AZURE LA WORKSPACE ID>>",
     "NRQL": "<<REPLACE WITH YOUR NRQL QUERY FOR EXAMPLE: From SystemSample Select * >>",
-    "LogType": "<<REPLACE WITH YOUR NAME TABLE NAME>>",
+    "LogType": "<<REPLACE WITH YOUR NEW TABLE NAME>>",
     "MinutesInterval": "5",
     "NRKey": "<<REPLACE WITH NR USER KEY>>"
 }
